# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,8 @@ import eventsRouter from "./events";
 import settingsRouter from "./settings";
 import whatsappRouter from "./whatsapp";
 import shiprocketRouter from "./shiprocket";
+import emailRouter from "./email";
+import checkoutsRouter from "./checkouts";
 
 const router: IRouter = Router();
 
@@ -14,5 +16,7 @@ router.use(ordersRouter);
 router.use(settingsRouter);
 router.use(whatsappRouter);
 router.use(shiprocketRouter);
+router.use(emailRouter);
+router.use(checkoutsRouter);
 
 export default router;
